# fastapi-app

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_app.sh
docs/en/: README.md
docs/es/: README.md
migrations/: env.py
migrations/versions/: 678f62ef4c65_init.py
src/: app.py  exceptions.py  logging.py  mail.py  middleware.py  rate_limit.py  router.py  settings.py  utils.py
src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
src/database/: __init__.py  redis.py
src/entities/: user.py
src/exceptions/: __init__.py  custom_exceptions.py  handler_exceptions.py  handlers.py  mappings.py
